2008-06-18  Ramon Novoa  <rnovoa@artica.es>

	* win32/modules/pandora_module_logevent.cc: Now returns "empty" data
	  when no data is available.

2008-06-13  Ramon Novoa  <rnovoa@artica.es>

	* win32/bin/PandoraAgent.exe: Updated to r857.

2008-06-13  Ramon Novoa  <rnovoa@artica.es>

	* win32/PandoraAgent.dev: Updated.
	* win32/windows/pandora_wmi.cc, win32/windows/pandora_wmi.h,
	  win32/pandora_windows_service.cc, win32/modules/pandora_module.h,
	  win32/modules/pandora_module_logevent.cc,
	  win32/modules/pandora_module_logevent.h,
	  win32/modules/pandora_module_factory.cc,
	  win32/modules/pandora_module_list.cc,
	  win32/modules/pandora_module.c: Added a new module that checks for
	  log events using WMI queries.
	* bin/pandora_agent.conf: Added encoding option and a Logevent module
	  declaration example.

2008-06-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora_strutils.cc, win32/pandora_strutils.h,
	  win32/modules/pandora_module.cc: Added support for floating-point
	  numbers.

2008-06-11  Ramon Novoa  <rnovoa@artica.es>

	* win32/bin/pandora_agent.conf: Added remote_config option.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	*  win32/bin/PandoraAgent.exe: Updated to r849.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	* win32/pandora.cc: Updated version information.

2008-06-10  Ramon Novoa  <rnovoa@artica.es>

	* win32/PandoraAgent.dev: Updated.
	* win32/misc/md5.c, win32/misc/md5.h: Added to repository.
	  Implementation of MD5 (RFC 1321).
	* win32/misc/pandora_file.cc, win32/misc/pandora_file.h: Added remote
	  configuration checking related functions.
	* win32/pandora_windows_service.cc, win32/pandora_windows_service.h:
	  Added support for remote configuration checking.

2008-06-09  Sancho Lerena <slerena@gmail.com>

	macOS agent update.

2008-06-09  Ramon Novoa  <rnovoa@artica.es>

	* linux/plugins/grep_log: Fixed command line parameter check.
	* linux/pandora_agent: Added support for remote configuration.